Ensure all files pip install in the same way

--- a/1_Mindbridge_Databricks_E2E_Integration_Tutorial.ipynb
+++ b/1_Mindbridge_Databricks_E2E_Integration_Tutorial.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "55d5ae82-8e05-4034-bbab-03d5fcc921d3",
      "showTitle": false,
@@ -46,10 +43,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "a221f5c1-5e69-4dfd-a142-38b09d420edf",
      "showTitle": false,
@@ -85,24 +79,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: mindbridge-api-python-client in /local_disk0/.ephemeral_nfs/envs/pythonEnv-7ed2149e-e82e-421a-8115-c0da4afde95c/lib/python3.11/site-packages (1.5.1)\nRequirement already satisfied: pydantic<3.0.0,>=2.5.2 in /local_disk0/.ephemeral_nfs/cluster_libraries/python/lib/python3.11/site-packages (from mindbridge-api-python-client) (2.9.2)\nRequirement already satisfied: urllib3<3.0.0,>=2.0.7 in /local_disk0/.ephemeral_nfs/cluster_libraries/python/lib/python3.11/site-packages (from mindbridge-api-python-client) (2.2.3)\nRequirement already satisfied: annotated-types>=0.6.0 in /local_disk0/.ephemeral_nfs/cluster_libraries/python/lib/python3.11/site-packages (from pydantic<3.0.0,>=2.5.2->mindbridge-api-python-client) (0.7.0)\nRequirement already satisfied: pydantic-core==2.23.4 in /local_disk0/.ephemeral_nfs/cluster_libraries/python/lib/python3.11/site-packages (from pydantic<3.0.0,>=2.5.2->mindbridge-api-python-client) (2.23.4)\nRequirement already satisfied: typing-extensions>=4.6.1 in /databricks/python3/lib/python3.11/site-packages (from pydantic<3.0.0,>=2.5.2->mindbridge-api-python-client) (4.10.0)\n\u001B[43mNote: you may need to restart the kernel using %restart_python or dbutils.library.restartPython() to use updated packages.\u001B[0m\nName: mindbridge-api-python-client\nVersion: 1.5.1\nSummary: Interact with the MindBridge API\nHome-page: https://www.mindbridge.ai\nAuthor: MBAI Support\nAuthor-email: mbaisupport@mindbridge.ai\nLicense: Proprietary\nLocation: /local_disk0/.ephemeral_nfs/envs/pythonEnv-7ed2149e-e82e-421a-8115-c0da4afde95c/lib/python3.11/site-packages\nRequires: pydantic, urllib3\nRequired-by: \n"
+      "Collecting mindbridge-api-python-client\n  Downloading mindbridge_api_python_client-1.8.0-py3-none-any.whl (106 kB)\n     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 106.8/106.8 kB 478.2 kB/s eta 0:00:00\nCollecting urllib3>=2.2.2\n  Downloading urllib3-2.5.0-py3-none-any.whl (129 kB)\n     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 129.8/129.8 kB 3.2 MB/s eta 0:00:00\nCollecting pydantic>=2.8.1\n  Downloading pydantic-2.11.7-py3-none-any.whl (444 kB)\n     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 444.8/444.8 kB 22.1 MB/s eta 0:00:00\nCollecting annotated-types>=0.6.0\n  Downloading annotated_types-0.7.0-py3-none-any.whl (13 kB)\nCollecting pydantic-core==2.33.2\n  Downloading pydantic_core-2.33.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.0 MB)\n     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 2.0/2.0 MB 52.5 MB/s eta 0:00:00\nCollecting typing-extensions>=4.12.2\n  Downloading typing_extensions-4.14.1-py3-none-any.whl (43 kB)\n     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 43.9/43.9 kB 3.6 MB/s eta 0:00:00\nCollecting typing-inspection>=0.4.0\n  Downloading typing_inspection-0.4.1-py3-none-any.whl (14 kB)\nInstalling collected packages: urllib3, typing-extensions, annotated-types, typing-inspection, pydantic-core, pydantic, mindbridge-api-python-client\n  Attempting uninstall: urllib3\n    Found existing installation: urllib3 1.26.14\n    Not uninstalling urllib3 at /databricks/python3/lib/python3.10/site-packages, outside environment /local_disk0/.ephemeral_nfs/envs/pythonEnv-b29468ee-f01c-4fde-a90f-41582bddb79d\n    Can't uninstall 'urllib3'. No files were found to uninstall.\n  Attempting uninstall: typing-extensions\n    Found existing installation: typing_extensions 4.4.0\n    Not uninstalling typing-extensions at /databricks/python3/lib/python3.10/site-packages, outside environment /local_disk0/.ephemeral_nfs/envs/pythonEnv-b29468ee-f01c-4fde-a90f-41582bddb79d\n    Can't uninstall 'typing_extensions'. No files were found to uninstall.\n  Attempting uninstall: pydantic\n    Found existing installation: pydantic 1.10.6\n    Not uninstalling pydantic at /databricks/python3/lib/python3.10/site-packages, outside environment /local_disk0/.ephemeral_nfs/envs/pythonEnv-b29468ee-f01c-4fde-a90f-41582bddb79d\n    Can't uninstall 'pydantic'. No files were found to uninstall.\nERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\nrequests 2.28.1 requires urllib3<1.27,>=1.21.1, but you have urllib3 2.5.0 which is incompatible.\nbotocore 1.27.96 requires urllib3<1.27,>=1.25.4, but you have urllib3 2.5.0 which is incompatible.\nSuccessfully installed annotated-types-0.7.0 mindbridge-api-python-client-1.8.0 pydantic-2.11.7 pydantic-core-2.33.2 typing-extensions-4.14.1 typing-inspection-0.4.1 urllib3-2.5.0\n\u001B[43mNote: you may need to restart the kernel using %restart_python or dbutils.library.restartPython() to use updated packages.\u001B[0m\n"
      ]
     }
    ],
    "source": [
     "%pip install --upgrade mindbridge-api-python-client\n",
-    "%restart_python\n",
-    "%pip show mindbridge-api-python-client"
+    "dbutils.library.restartPython()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "3fd13672-8bc9-45ae-a5d1-94d985e4a0ca",
      "showTitle": false,
@@ -140,10 +130,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "109a403a-ae91-4d2d-a0f7-89f9434dfacc",
      "showTitle": false,
@@ -189,7 +176,7 @@
     "\n",
     "# Create a connection to the server\n",
     "import mindbridgeapi as mbapi\n",
-    "url = \"test.mindbridge.ai\"\n",
+    "url = \"yoursubdomain.mindbridge.ai\"\n",
     "server = mbapi.Server(url=url, token=token)\n",
     "\n",
     "# Get the current user\n",
@@ -201,10 +188,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "46bc0a82-a948-4498-b1fa-7ce92c3ba7c7",
      "showTitle": false,
@@ -286,10 +270,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "17a3ad3b-945f-49ed-ae5c-6b8f0ba92ff6",
      "showTitle": false,
@@ -354,10 +335,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "8ab51eed-6912-4898-946d-686b60faa41b",
      "showTitle": false,
@@ -457,10 +435,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "f957f9af-7ef6-4779-bad8-c04a53f04c77",
      "showTitle": false,
@@ -1815,10 +1790,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "67fcbcdc-9b26-49ff-8396-5b7d81ea4a05",
      "showTitle": false,
@@ -4618,8 +4590,10 @@
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
    "dashboards": [],
    "environmentMetadata": null,
+   "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
