Update Storing Your MindBridge API Token in Databricks

--- a/1_Mindbridge_Databricks_E2E_Integration_Tutorial.ipynb
+++ b/1_Mindbridge_Databricks_E2E_Integration_Tutorial.ipynb
@@ -94,26 +94,22 @@
    "source": [
     "## Storing Your MindBridge API Token in Databricks\n",
     "\n",
-    "If you do not have an API Token already you can follow the [Create an API Token Guide](https://support.mindbridge.ai/hc/en-us/articles/9349943782039-Create-an-API-token)\n",
-    "Once that is done, we’ll create a [Databricks-backed secret scope](<https://learn.microsoft.com/en-us/azure/databricks/security/secrets/secret-scopes#create-a-databricks-backed-secret-scope) using the Databricks CLI to securely store your token. If you haven’t set up the Databricks CLI yet, you can follow the setup instructions [here](https://docs.databricks.com/en/dev-tools/cli/index.html).\n",
+    "If you do not have an API Token already you can follow [Create an API token](https://support.mindbridge.ai/hc/en-us/articles/9349943782039-Create-an-API-token) on our knowledge base. Once that is done, we'll [Create a Databricks-backed secret scope](https://learn.microsoft.com/en-us/azure/databricks/security/secrets/#create-a-databricks-backed-secret-scope) using the Databricks CLI to securely store your token. If you haven't set up the Databricks CLI yet, you can follow [Install or update the Databricks CLI](https://learn.microsoft.com/en-us/azure/databricks/dev-tools/cli/install).\n",
     "\n",
     "After installing and configuring the CLI, use the following commands to create a new secret scope and add your API Token to the scope:\n",
-    "<br/><br/>\n",
     "\n",
-    "```bash\n",
+    "```sh\n",
     "# Create the secret scope named \"mindbridge-api-tutorials\"\n",
-    "databricks secrets create-scope --scope mindbridge-api-tutorials\n",
+    "databricks secrets create-scope mindbridge-api-tutorials\n",
     "\n",
     "# Add your MindBridge API Token to the scope\n",
-    "databricks secrets put --scope mindbridge-api-tutorials --key MINDBRIDGE_API_TOKEN --string-value YOUR-API-TOKEN\n",
+    "databricks secrets put-secret mindbridge-api-tutorials MINDBRIDGE_API_TOKEN\n",
     "```\n",
-    "<br/>\n",
-    "Once your token is added, you can verify its existence by running the following:\n",
-    "<br/><br/>\n",
     "\n",
-    "```bash\n",
+    "Once your token is added, you can verify its existence by running the following:\n",
+    "```sh\n",
     "databricks secrets list-scopes\n",
-    "databricks secrets list --scope mindbridge-api-tutorials\n",
+    "databricks secrets list-secrets mindbridge-api-tutorials\n",
     "```\n"
    ]
   },
