--- a/1_Mindbridge_Databricks_E2E_Integration_Tutorial.ipynb
+++ b/1_Mindbridge_Databricks_E2E_Integration_Tutorial.ipynb
@@ -150,10 +150,13 @@
    "outputs": [],
    "source": [
     "# Load your token from the secret scope\n",
-    "token = dbutils.secrets.get(scope=\"mindbridge-api-tutorials\", key=\"MINDBRIDGE_API_TOKEN\")\n",
+    "token = dbutils.secrets.get(\n",
+    "    scope=\"mindbridge-api-tutorials\", key=\"MINDBRIDGE_API_TOKEN\"\n",
+    ")\n",
     "\n",
     "# Create a connection to the server\n",
     "import mindbridgeapi as mbapi\n",
+    "\n",
     "url = \"yoursubdomain.mindbridge.ai\"\n",
     "server = mbapi.Server(url=url, token=token)\n",
     "\n",
@@ -208,7 +211,7 @@
     "    organization_item = mbapi.OrganizationItem(\n",
     "        name=organization_name,\n",
     "        external_client_code=\"My Client ID\",  # Optional\n",
-    "        manager_user_ids=[user.id]            # Optional\n",
+    "        manager_user_ids=[user.id],  # Optional\n",
     "    )\n",
     "    organization = server.organizations.create(organization_item)\n",
     "    print(f\"Created the Organization: '{organization_name}'\")\n",
@@ -218,7 +221,9 @@
     "\n",
     "# Step 2: Get the Library we want to use in the Engagement\n",
     "system_libraries = server.libraries.get({\"system\": True})\n",
-    "mindbridge_for_profit_library = next((x for x in system_libraries if x.name == library_name), None)\n",
+    "mindbridge_for_profit_library = next(\n",
+    "    (x for x in system_libraries if x.name == library_name), None\n",
+    ")\n",
     "\n",
     "# Step 3: Create the Engagement, or get it if it already exists\n",
     "try:\n",
@@ -226,13 +231,19 @@
     "        organization_id=organization.id,\n",
     "        name=engagement_name,\n",
     "        engagement_lead_id=user.id,\n",
-    "        library_id=mindbridge_for_profit_library.id\n",
+    "        library_id=mindbridge_for_profit_library.id,\n",
     "    )\n",
     "    engagement = server.engagements.create(engagement_item)\n",
     "    print(f\"Created the Engagement: '{engagement_name}'\")\n",
     "except mbapi.exceptions.ValidationError:\n",
-    "    engagement = next(server.engagements.get({\"organizationId\": organization.id, \"name\": engagement_name}))\n",
-    "    print(f\"Engagement '{engagement_name}' already exists within the Organization. Fetched it instead.\")"
+    "    engagement = next(\n",
+    "        server.engagements.get(\n",
+    "            {\"organizationId\": organization.id, \"name\": engagement_name}\n",
+    "        )\n",
+    "    )\n",
+    "    print(\n",
+    "        f\"Engagement '{engagement_name}' already exists within the Organization. Fetched it instead.\"\n",
+    "    )"
    ]
   },
   {
@@ -273,22 +284,21 @@
    "source": [
     "import os\n",
     "\n",
-    "relative_path = './data/GENERAL_LEDGER_JOURNAL.csv'\n",
+    "relative_path = \"./data/GENERAL_LEDGER_JOURNAL.csv\"\n",
     "full_path = os.path.abspath(relative_path)\n",
     "\n",
     "gl_file_manager_item = mbapi.FileManagerItem(engagement_id=engagement.id)\n",
     "\n",
     "# Upload General Ledger\n",
     "gl_file_manager_file = server.file_manager.upload(\n",
-    "    input_item=gl_file_manager_item,\n",
-    "    input_file=full_path\n",
+    "    input_item=gl_file_manager_item, input_file=full_path\n",
     ")\n",
     "\n",
     "# We can check to see if our files are in the File Manager\n",
     "file_manager_generator = server.file_manager.get({\"engagementId\": engagement.id})\n",
     "print(\"Here are the files in the File Manager for your Engagement\")\n",
     "for file_manager_entity in file_manager_generator:\n",
-    "  print(file_manager_entity.original_name)"
+    "    print(file_manager_entity.original_name)"
    ]
   },
   {
@@ -337,7 +347,7 @@
     "    analysis_periods=[{\"startDate\": \"2020-01-01\", \"endDate\": \"2021-01-01\"}],\n",
     "    analysis_type_id=mbapi.AnalysisTypeItem.GENERAL_LEDGER,\n",
     "    currency_code=\"CAD\",\n",
-    "    name=\"General Ledger Analysis\"\n",
+    "    name=\"General Ledger Analysis\",\n",
     ")\n",
     "\n",
     "analysis = server.analyses.create(analysis_item)\n",
@@ -366,7 +376,10 @@
     "    if gl_analysis_source.workflow_state.value != prev_state:\n",
     "        print(f\"Current State: {gl_analysis_source.workflow_state.value}\")\n",
     "        prev_state = gl_analysis_source.workflow_state.value\n",
-    "    if gl_analysis_source.workflow_state.value == gl_analysis_source_item.target_workflow_state.value:\n",
+    "    if (\n",
+    "        gl_analysis_source.workflow_state.value\n",
+    "        == gl_analysis_source_item.target_workflow_state.value\n",
+    "    ):\n",
     "        print(\"Analysis Source is ready.\")\n",
     "        break\n",
     "\n",
@@ -420,7 +433,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "\n",
     "server.analyses.restart_data_tables(analysis)\n",
@@ -428,28 +440,30 @@
     "# Loop through each data_table and display information\n",
     "for data_table in analysis.data_tables:\n",
     "    # Display general data_table information\n",
-    "    general_info = pd.DataFrame({\n",
-    "        \"Analysis ID\": [data_table.analysis_id],\n",
-    "        \"Data Table ID\": [data_table.id],\n",
-    "        \"Logical Name\": [data_table.logical_name],\n",
-    "        \"Type\": [data_table.type]\n",
-    "    })\n",
+    "    general_info = pd.DataFrame(\n",
+    "        {\n",
+    "            \"Analysis ID\": [data_table.analysis_id],\n",
+    "            \"Data Table ID\": [data_table.id],\n",
+    "            \"Logical Name\": [data_table.logical_name],\n",
+    "            \"Type\": [data_table.type],\n",
+    "        }\n",
+    "    )\n",
     "    display(general_info)\n",
-    "    \n",
+    "\n",
     "    # Prepare column data for this data_table\n",
     "    column_data = [\n",
     "        {\n",
     "            \"Field\": col.field,\n",
     "            \"Filter Only\": col.filter_only,\n",
     "            \"Keyword Search\": col.keyword_search,\n",
-    "            \"Type\": col.type.value\n",
+    "            \"Type\": col.type.value,\n",
     "        }\n",
     "        for col in data_table.columns\n",
     "    ]\n",
-    "    \n",
+    "\n",
     "    # Create DataFrame for column data and display it\n",
     "    column_df = pd.DataFrame(column_data)\n",
-    "    display(column_df)\n"
+    "    display(column_df)"
    ]
   },
   {
@@ -489,9 +503,10 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "# Define the output file path where the results will be saved\n",
     "\n",
-    "output_relative_path = './results/result.csv'\n",
+    "output_relative_path = \"./results/result.csv\"\n",
     "output_full_path = os.path.abspath(output_relative_path)\n",
     "\n",
     "print(\"Requesting Elevated Risk General Ledger Transactions\")\n",
@@ -510,10 +525,9 @@
     "\n",
     "# Define the output path for saving the CSV file\n",
     "path_output = server.data_tables.download(\n",
-    "    export_async_result,\n",
-    "    output_file_path=output_full_path,\n",
+    "    export_async_result, output_file_path=output_full_path\n",
     ")\n",
-    "print(f\"Success! Saved to: {path_output}\")\n"
+    "print(f\"Success! Saved to: {path_output}\")"
    ]
   },
   {
