--- a/1_Mindbridge_Databricks_E2E_Integration_Tutorial.ipynb
+++ b/1_Mindbridge_Databricks_E2E_Integration_Tutorial.ipynb
@@ -149,13 +149,13 @@
    },
    "outputs": [],
    "source": [
+    "import mindbridgeapi as mbapi\n",
+    "\n",
     "# Load your token from the secret scope\n",
     "token = dbutils.secrets.get(scope=\"mindbridge-api-tutorials\", key=\"MINDBRIDGE_API_TOKEN\")\n",
     "\n",
     "# Create a connection to the server\n",
-    "import mindbridgeapi as mbapi\n",
-    "url = \"yoursubdomain.mindbridge.ai\"\n",
-    "server = mbapi.Server(url=url, token=token)\n",
+    "server = mbapi.Server(url=\"yoursubdomain.mindbridge.ai\", token=token)\n",
     "\n",
     "# Get the current user\n",
     "user = server.users.get_current()\n",
@@ -232,7 +232,10 @@
     "    print(f\"Created the Engagement: '{engagement_name}'\")\n",
     "except mbapi.exceptions.ValidationError:\n",
     "    engagement = next(server.engagements.get({\"organizationId\": organization.id, \"name\": engagement_name}))\n",
-    "    print(f\"Engagement '{engagement_name}' already exists within the Organization. Fetched it instead.\")"
+    "    print(\n",
+    "      f\"Engagement '{engagement_name}' already exists within the Organization. \"\n",
+    "      \"Fetched it instead.\"\n",
+    "    )"
    ]
   },
   {
@@ -271,10 +274,10 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
+    "from pathlib import Path\n",
     "\n",
     "relative_path = './data/GENERAL_LEDGER_JOURNAL.csv'\n",
-    "full_path = os.path.abspath(relative_path)\n",
+    "full_path = Path(relative_path).resolve()\n",
     "\n",
     "gl_file_manager_item = mbapi.FileManagerItem(engagement_id=engagement.id)\n",
     "\n",
@@ -488,11 +491,11 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
+    "from pathlib import Path\n",
     "# Define the output file path where the results will be saved\n",
     "\n",
     "output_relative_path = './results/result.csv'\n",
-    "output_full_path = os.path.abspath(output_relative_path)\n",
+    "output_full_path = Path(output_relative_path).resolve()\n",
     "\n",
     "print(\"Requesting Elevated Risk General Ledger Transactions\")\n",
     "# Restart data tables to reset generator\n",
