--- a/1_Mindbridge_Databricks_E2E_Integration_Tutorial.ipynb
+++ b/1_Mindbridge_Databricks_E2E_Integration_Tutorial.ipynb
@@ -14,29 +14,28 @@
    },
    "source": [
     "# Integrating MindBridge with Databricks: A Step-by-Step Guide\n",
-    "\n",
-    "This tutorial will guide you through the process of integrating MindBridge with Databricks. We will walkthrough how to set up an Organization and Engagement using the MindBridge SDK, how to perform a General Ledger Analysis on data from Databricks, then how you can extract key information from your Analysis Results. Here’s what we’ll cover:\n",
+    "This tutorial will guide you through the process of integrating MindBridge with Databricks. We will walkthrough how to set up an Organization and Engagement using the MindBridge SDK, how to perform a General Ledger Analysis on data from Databricks, then how you can extract key information from your Analysis Results. Here's what we'll cover:\n",
     "\n",
     "1. **Installing the MindBridge SDK in Databricks**  \n",
-    "   We’ll start by installing the MindBridge SDK in your Databricks environment, enabling access to MindBridge’s API features within your notebooks.\n",
+    "   We'll start by installing the MindBridge SDK in your Databricks environment, enabling access to MindBridge's API features within your notebooks.\n",
     "\n",
     "2. **Storing your MindBridge API Token in Databricks**  \n",
     "   Learn to securely save your MindBridge API token in a Databricks-backed secret scope. This step ensures that sensitive credentials are safely managed within Databricks.\n",
     "\n",
     "3. **Loading your MindBridge API Token in Databricks**  \n",
-    "   With the token stored, we’ll show you how to load and use it to configure your API connection.\n",
+    "   With the token stored, we'll show you how to load and use it to configure your API connection.\n",
     "\n",
     "4. **Setting Up an Organization and Engagement**  \n",
-    "   Here, you’ll learn how to configure an Organization and Engagement for your Analysis.\n",
+    "   Here, you'll learn how to configure an Organization and Engagement for your Analysis.\n",
     "\n",
     "5. **Uploading Files to the File Manager**  \n",
-    "    How to upload files into the File Manager created for your Engagement\n",
+    "   How to upload files into the File Manager created for your Engagement\n",
     "\n",
     "6. **Creating and Running Analyses**  \n",
-    "   In this section, you’ll learn how to create a new analysis, link the necessary data from the File Manager, and execute the analysis.\n",
+    "   In this section, you'll learn how to create a new analysis, link the necessary data from the File Manager, and execute the analysis.\n",
     "\n",
     "7. **Getting the Analysis Results**  \n",
-    "   Finally, we’ll retrieve and display the results of your analysis, providing insights into your data that you can further leverage within Databricks.[](url)\n"
+    "   Finally, we'll retrieve and display the results of your analysis, providing insights into your data that you can further leverage within Databricks."
    ]
   },
   {
@@ -53,7 +52,6 @@
    },
    "source": [
     "## Installing the MindBridge SDK in Databricks\n",
-    "\n",
     "The following commands can be run to install the [mindbridge-api-python-client](https://pypi.org/project/mindbridge-api-python-client/) to your currently selected cluster. Version 1.5.1 or newer is required for the steps in this tutorial."
    ]
   },
@@ -93,7 +91,6 @@
    },
    "source": [
     "## Storing Your MindBridge API Token in Databricks\n",
-    "\n",
     "If you do not have an API Token already you can follow [Create an API token](https://support.mindbridge.ai/hc/en-us/articles/9349943782039-Create-an-API-token) on our knowledge base. Once that is done, we'll [Create a Databricks-backed secret scope](https://learn.microsoft.com/en-us/azure/databricks/security/secrets/#create-a-databricks-backed-secret-scope) using the Databricks CLI to securely store your token. If you haven't set up the Databricks CLI yet, you can follow [Install or update the Databricks CLI](https://learn.microsoft.com/en-us/azure/databricks/dev-tools/cli/install).\n",
     "\n",
     "After installing and configuring the CLI, use the following commands to create a new secret scope and add your API Token to the scope:\n",
@@ -110,7 +107,7 @@
     "```sh\n",
     "databricks secrets list-scopes\n",
     "databricks secrets list-secrets mindbridge-api-tutorials\n",
-    "```\n"
+    "```"
    ]
   },
   {
@@ -128,7 +125,7 @@
    "source": [
     "## Loading your MindBridge API Token in Databricks\n",
     "\n",
-    "In this section, we’ll load the MindBridge API token securely stored in Databricks and configure the API connection. Replace the ```url``` with the url for your MindBridge instance. Upon execution, you should see details about the user associated with your token."
+    "In this section, we'll load the MindBridge API token securely stored in Databricks and configure the API connection. Replace the ```url``` with the url for your MindBridge instance. Upon execution, you should see details about the user associated with your token."
    ]
   },
   {
@@ -178,8 +175,7 @@
    },
    "source": [
     "## Setting up an Organization and Engagement\n",
-    "\n",
-    "In this section, we’ll walk through setting up an Organization and an Engagement to house your Analysis. We’ll set up the Engagement using the MindBridge for-profit library. If you already have an existing Organization and Engagement you would like to use, you can update the ```organization_name``` and ```engagement_name``` values to use your preferred entities. If your Engagement uses a different Library, you may need to update later steps so that your Analysis Type and Analysis Source Types are compatible with the Library you selected."
+    "In this section, we'll walk through setting up an Organization and an Engagement to house your Analysis. We'll set up the Engagement using the MindBridge for-profit library. If you already have an existing Organization and Engagement you would like to use, you can update the `organization_name` and `engagement_name` values to use your preferred entities. If your Engagement uses a different Library, you may need to update later steps so that your Analysis Type and Analysis Source Types are compatible with the Library you selected."
    ]
   },
   {
@@ -260,7 +256,6 @@
    },
    "source": [
     "## Uploading Files to the File Manager\n",
-    "\n",
     "After an Engagement is created, a File Manager entity is automatically set up to store data used by Analyses within the Engagement. We will upload our example General Ledger file from the data folder to the File Manager."
    ]
   },
@@ -315,8 +310,7 @@
    },
    "source": [
     "## Creating and Running Analyses\n",
-    "\n",
-    "With our Engagement set up and files uploaded, we’re ready to create an Analysis. We’ll import the General Ledger File Manager as an Analysis Source, mark the Account Mappings as verified then run the Analysis.\n",
+    "With our Engagement set up and files uploaded, we're ready to create an Analysis. We'll import the General Ledger File Manager as an Analysis Source, mark the Account Mappings as verified then run the Analysis.\n",
     "\n",
     "If you used a custom library instead of the MindBridge for-profit library used in *Setting up an Organization and Engagement*, you will need to upload a Chart of Accounts or use the Account Mappings endpoints to map the accounts within the General Ledger. In this example we will use the Verify Mappings endpoint to use the suggested Account Mappings created by MindBridge."
    ]
@@ -410,7 +404,6 @@
    "source": [
     "## Getting the Analysis Results\n",
     "\n",
-    "\n",
     "### Overview of Data Table information\n",
     "First we will take a look at what Data Tables exist on this Analysis and how the data is structured. Below is some code to generate an overview of each Data Table in the Analysis, including the fields, data type and whether the field is searchable."
    ]
@@ -480,7 +473,6 @@
    },
    "source": [
     "### Extracting Key Info from MindBridge \n",
-    "\n",
     "Now let's extract specific data from our Data Tables. In this example we will fetch all of the transactions which had a Risk Score greater or equal to 30%. Then we will save the results in a CSV and load them into a pandas DataFrame."
    ]
   },
